--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.44</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
